# java-notes

./: README.md
HelloWorld/: HelloWorld.java
_apache_cxf_notes/: README.md  pom.xml  readme.txt
_servlet_notes/: README.md  pom.xml
_spring_notes/: MyEnum.java  SpringFundamentals.txt
build-tools/gradle-org/: README.md  build.gradle  settings.gradle
build-tools/maven/helloworld/: pom.xml
build-tools/maven/maven-archetype-quickstart/: pom.xml
build-tools/maven/maven-archetype-webapp/: pom.xml
build-tools/maven/multimodule/: pom.xml
examples/hello-worlds/hello-world-src-bin/: .project
examples/uml-java/: README.md
examples/uml-java/JAXB_Example-release01/: pom.xml
examples/uml-java/ORM_Example/: pom.xml
examples/uml-java/SimpleMockExample-master/: pom.xml
examples/uml-java/stockapp/: pom.xml
examples/uml-java/stockapp_7/: pom.xml
examples/uml-java/stockquote-week5-solved/: pom.xml
examples/uml-java/stockspringapp/: pom.xml
examples/uml-java/stockspringapp-skeleton/: pom.xml
examples/uml-java/stockspringwebapp_9/: pom.xml
examples/uml-java/stockwebapp/: pom.xml
examples/uml-java/stockwebapp_8/: pom.xml
examples/uml-java/stockwebapp_9/: pom.xml
examples/uml-java/stockwebmvcapp/: pom.xml
frameworks/apache-cxf/: pom.xml
frameworks/jax-rs/: README.md
frameworks/spring-boot/bazel-java-jar/src/main/: BUILD.bazel
frameworks/spring-boot/bazel-java-jar/src/main/java/com/ex/bazel/springboot/: Application.java  HelloController.java  WebConfiguration.java
frameworks/spring-boot/bazel-java-jar/src/test/: BUILD.bazel
frameworks/spring-boot/bazel-java-war/src/main/: BUILD.bazel
frameworks/spring-boot/bazel-java-war/src/main/java/com/ex/bazel/springboot/: HelloController.java  ServletInitializer.java  WebConfiguration.java
frameworks/spring-boot/bazel-java-war/src/main/resources/: application.properties  log4j.xml
frameworks/thorntail/: README.md
helloworldpackage/: README.md
helloworldpackages/: README.md
ide/vs-code/: README.md
java-ee/: java-ee-7.md
java-notes/: README.md
laboratory/: pom.xml
lang/java-ee/: README.md
lang/java-notes/: pom.xml
lang/laboratory/: pom.xml
lang/servlet/: pom.xml
maven/: README.md
maven/helloworld/: README.md
quarkus-getting-started/: README.md  pom.xml
quarkus-using-spring-di/: pom.xml
servers/jboss/: README.md  standalone.xml
spring-boot-blank-archetype/: .project  pom.xml
spring-initializer-maven/: pom.xml
spring-rest-template/: pom.xml
uml-java/stockspringapp/: pom.xml
uml-java/stockspringapp-skeleton/: pom.xml
uml-java/stockwebapp_8/: pom.xml
uml-java/stockwebapp_9/: pom.xml
(+345 files in other folders)
